# haxball-reinforcement-learning

./: .env.example  .gitignore  CONTRIBUTING.md  GPT.md  LICENSE  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: ci.yml
docs/: CODEBASE_CLEANUP.md  PPO_VS_CHASE.md  TRAINING_ARCHITECTURE.md
haxball_env/: __init__.py  actions.py  config.py  env.py  observations.py  physics.py  renderer.py  rewards.py  scripted.py
integration/: README.md  __init__.py  package-lock.json  package.json
integration/bridge/: action_watchdog.js  config.js  protocol.js  protocol.md  readiness.js  websocket_server.js
integration/browser/: bot_reconnect.js  client_startup.js  controlled_client.js  dual_input.js  game_surface.js  input_controller.js  (+5 more)
policy_contract/: __init__.py  action_contract.py  chase_contract.py  checkpoint_contract.py  observation_contract.py  versions.py
scripts/: benchmark_env.py  bootstrap_haxballgym.sh  check_documentation.py  smoke_random_agent.py  watch_scripted_match.py
sim_training/: __init__.py  action_adapter.py  benchmark_haxballgym.py  chase_diagnostic.py  checkpoint.py  curriculum.py  env_factory.py  evaluate.py  goal_attribution.py  observation_builder.py  opponent_pool.py  policy.py  promotion.py  pulse_engine.py  randomized_reset.py  reward_config.py  self_play_pool.py  tournament.py  tracking_action.py  train.py
tests/: test_actions.py  test_env.py  test_observations.py  test_physics.py  test_physics_tuning.py  test_readme_script_inventory.py  test_renderer.py  test_repository_hygiene.py  test_validation.py
(+59 files in other folders)
